--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
 <body>
     <div class="employee-container">
         <div class="employee-card">
-            <img src="bilder/gründerin.jpg" alt="gründerin" width="225" height="300">
+            <img src="gründerin.jpg" alt="gründerin" width="225" height="300">
             <h3>Gründerin – Anina</h3>
             <p>Als Gründerin von Nini's teile ich meine Leidenschaft für warme Tage, Sonnenschein und gute Laune durch saisonale Blumen, erfrischende Getränke und köstliche Kaffees in meinem Kiosk. Mein Ziel ist es, einen Ort zu schaffen, an dem du auch an einem wolkigen Tag von sonniger Atmosphäre umgeben bist. </p>
         <div class="employee-card">
