--- a/kleinerbunterfrühling.html
+++ b/kleinerbunterfrühling.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="product-container">
-        <a href="kleinerbunterfrühling.html#kleine-bunte-freude"></a><img src="bilder/kleinebuntefreude.jpg" alt="Produktbild" class="product-image">
+        <a href="kleinerbunterfrühling.html#kleine-bunte-freude"></a><img src="kleinebuntefreude.jpg" alt="Produktbild" class="product-image">
         <div class="product-title">Kleiner bunter Frühling</div>
         <div class="product-info"> 
             Als eine sorgfältig Kombination unserer saisonalen
