--- a/team.html
+++ b/team.html
@@ -16,14 +16,14 @@
             <h3>Gründerin – Anina</h3>
             <p>Als Gründerin von Nini's teile ich meine Leidenschaft für warme Tage, Sonnenschein und gute Laune durch saisonale Blumen, erfrischende Getränke und köstliche Kaffees in meinem Kiosk. Mein Ziel ist es, einen Ort zu schaffen, an dem du auch an einem wolkigen Tag von sonniger Atmosphäre umgeben bist. </p>
         <div class="employee-card">
-            <img src="bilder/Mitarbeiterin.jpg" alt="Mitarbeiterin" width="225" height="300">
+            <img src="Mitarbeiterin.jpg" alt="Mitarbeiterin" width="225" height="300">
             <h3>Mitarbeiterin – Sofia</h3>
             <p>Hallo, ich bin Sofia, deine Blumenexpertin bei Nini's!
                 Mit meiner Leidenschaft für Blumen sorge ich dafür, dass unser Sortiment immer frisch und farbenfroh ist. Ich liebe es, einzigartige
                 Blumenbouquets zu binden und mit frischen Iced Coffees den Tag unserer Kunden zu verschönern. </p>
         </div>
         <div class="employee-card">
-            <img src="bilder/helfer.jpg" alt="helfer" width="225" height="300">
+            <img src="helfer.jpg" alt="helfer" width="225" height="300">
             <h3>Helfer auf vier Pfoten – Daisy</h3>
             <p>Daisy, unser liebenswerter Bichon Frisé, ist nicht nur ein flauschiger Hund, sondern auch unser treuer Kiosk-Begleiter. Mit ihrem fröhlichen Wesen und ihrem Gespür für Kundenbedürfnisse verbreitet sie Freude und macht den Kioskbesuch zu einem herzlichen Erlebnis. Daisy, die kleine Sympathieträgerin, bringt mit ihrem Charme und ihrer Freude eine besondere Note in unseren Kioskalltag.</p>
             <br>
