--- a/findus.html
+++ b/findus.html
@@ -20,7 +20,7 @@
         68210 Bunthausen
       </address>
       <div class="image">
-        <img src="location.jpg" alt="location" idth="120" height="120">
+        <img src="bilder/location.jpg" alt="location" idth="120" height="120">
       </div>
       <h4><a href="https://www.google.com/maps" target="_blank" rel="noopener noreferrer">Google-Maps</a></h4>
       <h4>
@@ -29,7 +29,7 @@
     </div>
     
     <div class="image">
-      <img src="findus.jpg" alt="">
+      <img src="bilder/findus.jpg" alt="">
     </div>
   </div>
 
