--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@
                 Blumenbouquets zu binden und mit frischen Iced Coffees den Tag unserer Kunden zu verschönern. </p>
         </div>
         <div class="employee-card">
-            <img src="bilder/helfer.jpg" alt="helfer" width="225" height="300">
+            <img src="bilder/Helfer.jpg" alt="helfer" width="225" height="300">
             <h3>Helfer auf vier Pfoten – Daisy</h3>
             <p>Daisy, unser liebenswerter Bichon Frisé, ist nicht nur ein flauschiger Hund, sondern auch unser treuer Kiosk-Begleiter. Mit ihrem fröhlichen Wesen und ihrem Gespür für Kundenbedürfnisse verbreitet sie Freude und macht den Kioskbesuch zu einem herzlichen Erlebnis. Daisy, die kleine Sympathieträgerin, bringt mit ihrem Charme und ihrer Freude eine besondere Note in unseren Kioskalltag.</p>
             <br>
