--- a/legaldisclosure.html
+++ b/legaldisclosure.html
@@ -18,7 +18,7 @@
         Inhaberin: Anina Argiriou
         </p>
         <p>
-        Adresse: sommerstraße 21, 68159 Mannheim
+        Adresse: frühlingsstraße 21, 68210 Bunthausen
         </p> 
         </div>
         <br>
